[package]
name = "idfind"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your@email.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
indicatif = "0.18.0"
